--- a/plugins/dynamix/Browse.page
+++ b/plugins/dynamix/Browse.page
@@ -31,7 +31,7 @@ $(function(){
   });
 });
 </script>
-<table class="indexer tablesorter">
+<table class="indexer tablesorter shift">
  <thead><tr><th>Type</th><th class='sorter-text'>Name</th><th>Size</th><th>Last Modified</th><th>Location</th></tr></thead>
  <tbody><tr><td colspan="5"><div class="spinner"></div></td></tr></tbody>
 </table>
