--- a/plugins/dynamix/DashStats.page
+++ b/plugins/dynamix/DashStats.page
@@ -127,20 +127,10 @@ function active_disks($disk) {
 $disks = array_filter($disks,'active_disks');
 $slots = count($disks) + count($devs);
 ?>
-<?if ($slots<30):?>
-<style>
-table.share_status.fixed td:nth-child(<?=$slots+1?>)~td{visibility:hidden}
-<?if ($display['theme']=='white'):?>
-table.share_status.fixed td:nth-child(<?=$slots+1?>){border-right:1px solid #E8E8E8}
-<?elseif ($display['theme']=='black'):?>
-table.share_status.fixed td:nth-child(<?=$slots+1?>){border-right:1px solid #202020}
-<?endif;?>
-</style>
-<?endif;?>
 <table class='share_status fixed'>
 <thead><tr>
 <?
-$row0 = array_fill(0,30,"<td>-</td>"); $i = 0;
+$row0 = array_fill(0,30,"<td></td>"); $i = 0;
 foreach ($disks as $disk) if ($disk['type']=='Parity') $row0[$i++] = "<td>Parity<br>&nbsp;".filter_var($disk['name'],FILTER_SANITIZE_NUMBER_INT)."&nbsp;</td>";
 foreach ($disks as $disk) if ($disk['type']=='Data') $row0[$i++] = "<td>Disk<br>&nbsp;".filter_var($disk['name'],FILTER_SANITIZE_NUMBER_INT)."&nbsp;</td>";
 if ($slots <= 30) {
