--- a/plugins/dynamix/SecurityAFP.page
+++ b/plugins/dynamix/SecurityAFP.page
@@ -16,7 +16,7 @@ Cond="(($var['shareAFPEnabled']!='no') && (isset($name)?array_key_exists($name,$
  */
 ?>
 <?
-$width = strstr('gray,azure',$display['theme']) ? [123,305]:[123,300];
+$width = [123,305];
 ?>
 > This section is used to configure the security settings for the share when accessed using AFP and
 > appears only when AFP is enabled on the Network Services page.
