--- a/plugins/dynamix/Share.page
+++ b/plugins/dynamix/Share.page
@@ -54,7 +54,7 @@ function toggleButton(button,id) {
   $('input#'+button).prop('disabled',disabled);
 }
 <?if ($name):?>
-var ctrl = "<span class='ctrl1 status vhshift'><a href='/Shares/Share?name=<?=$prev?>' title='previous user share'><button type='button' style='margin-right:4px'><i class='fa fa-chevron-left fa-fw'></i></button></a><a href='/Shares/Share?name=<?=$next?>' title='next user share'><button type='button'><i class='fa fa-chevron-right fa-fw'></i></button></a></span>";
+var ctrl = "<span class='ctrl1 status <?=$tabbed?'vhshift':'vshift'?>'><a href='/Shares/Share?name=<?=$prev?>' title='previous user share'><button type='button' style='margin-right:4px'><i class='fa fa-chevron-left fa-fw'></i></button></a><a href='/Shares/Share?name=<?=$next?>' title='next user share'><button type='button'><i class='fa fa-chevron-right fa-fw'></i></button></a></span>";
 
 $(function() {
 <?if ($tabbed):?>
