--- a/plugins/dynamix/ShareSettings.page
+++ b/plugins/dynamix/ShareSettings.page
@@ -18,8 +18,8 @@ Tag="share-alt-square"
 ?>
 <?
 $disabled = $var['fsState']!='Stopped' ? 'disabled' : '';
-$disks = array_filter($disks,'my_disks');
-$width = strstr('gray,azure',$display['theme']) ? [166,305]:[131,300];
+$disks    = array_filter($disks,'my_disks');
+$width    = [166,305];
 ?>
 <script>
 $(function() {
