--- a/plugins/dynamix/UserAdd.page
+++ b/plugins/dynamix/UserAdd.page
@@ -26,9 +26,9 @@ span#dropbox{border:1px solid #606E7F;border-radius:5px;background:#121510;paddi
 <?elseif ($display['theme']=='azure'):?>
 span#dropbox{border:1px solid #606E7F;border-radius:5px;background:#EDEAEF;padding:28px 12px;line-height:72px;margin-right:16px;}
 <?elseif ($display['theme']=='black'):?>
-span#dropbox{border:1px solid #202020;border-radius:5px;background:-webkit-radial-gradient(#303030,#101010);background:linear-gradient(#303030,#101010);padding:28px 12px;line-height:72px;margin-right:16px;}
+span#dropbox{border:1px solid #f2f2f2;border-radius:5px;background:#262626;padding:28px 12px;line-height:72px;margin-right:16px;}
 <?else:?>
-span#dropbox{border:1px solid #D0D0D0;border-radius:5px;background:radient(#B0B0B0,#F0F0F0);background:linear-gradient(#B0B0B0,#F0F0F0);padding:28px 12px;line-height:72px;margin-right:16px;}
+span#dropbox{border:1px solid #1c1c1c;border-radius:5px;background:#e8e8e8;padding:28px 12px;line-height:72px;margin-right:16px;}
 <?endif;?>
 i.top{position:absolute;padding-top:4px;cursor:pointer;}
 </style>
