--- a/plugins/dynamix/styles/dynamix-azure.css
+++ b/plugins/dynamix/styles/dynamix-azure.css
@@ -1,5 +1,5 @@
 body>div.jGrowl{position:fixed}
-div.jGrowl{font-size:13px}
+div.jGrowl{font-size:14px}
 div.jGrowl.top-left{left:70px;top:59px}
 div.jGrowl.top-right{right:10px;top:59px}
 div.jGrowl.bottom-left{left:70px;bottom:24px}
@@ -23,25 +23,25 @@ div.jGrowl div.jGrowl-closer.top{position:fixed;top:91px}
 .ui-dropdownchecklist-dropcontainer{color:#606E7F;background-color:#EDEAEF;border:#0072C6 1px solid}
 .ui-state-disabled{border-color:#808080;background:#C7C5CB;opacity:0.5}
 .ui-dropdownchecklist-indent{padding-left:7px}
-.ui-dropdownchecklist-text{font-family:arimo;font-size:13px;color:#606E7F}
+.ui-dropdownchecklist-text{font-family:clear-sans;font-size:13px;color:#606E7F}
 .ui-dropdownchecklist-item{height:22px;line-height:22px}
 .ui-dropdownchecklist-item input{vertical-align:top}
 #sb-info-inner,#sb-loading-inner,div.sb-message{color:#808080}
-#sb-title,#sb-title-inner{border-top-left-radius:10px;border-top-right-radius:10px;width:100%;height:50px;line-height:50px;font-size:18px;font-weight:bold;background:#C0C0C0;color:#606060;text-indent:10px;text-align:center}
+#sb-title,#sb-title-inner{border-top-left-radius:10px;border-top-right-radius:10px;width:100%;height:50px;line-height:50px;font-size:18px;font-weight:bold;letter-spacing:2px;background:#C0C0C0;color:#606060;text-indent:10px;text-align:center}
 #sb-title,#sb-info{position:relative;margin:0;padding:0;overflow:hidden}
 #sb-container{position:fixed;margin:0;padding:0;top:0;left:0;z-index:999;text-align:left;visibility:hidden;display:none}
 #sb-overlay{position:relative;height:100%;width:100%}
-#sb-wrapper{position:absolute;visibility:hidden;width:100px;border:1px #808080 solid;border-radius:10px;color:#1B1D1B;background:#EDEAEF}
+#sb-wrapper{position:absolute;visibility:hidden;width:100px;border:1px #808080 solid;border-radius:10px;color:#1c1c1c;background:#f2f2f2}
 #sb-wrapper-inner{overflow:hidden;height:100px}
 #sb-body{position:relative;height:100%}
-#sb-body-inner{position:absolute;height:100%;width:100%;color:#1B1D1B;background:#EDEAEF}
+#sb-body-inner{position:absolute;height:100%;width:100%;color:#1c1c1c;background:#f2f2f2}
 #sb-body img{border:none}
 #sb-loading{position:relative;height:100%}
 #sb-loading-inner{position:absolute;font-size:18px;line-height:20px;height:20px;top:50%;margin-top:-12px;width:100%;text-align:center}
 #sb-loading-inner span{background:url(../images/loading.gif) no-repeat;padding-left:22px;display:inline-block}
-#sb-body,#sb-loading{color:#1B1D1B;background-color:#EDEAEF}
+#sb-body,#sb-loading{color:#1c1c1c;background-color:#f2f2f2}
 #sb-info,#sb-info-inner{height:20px;line-height:20px}
-#sb-info-inner{font-size:12px}
+#sb-info-inner{font-size:14px}
 #sb-nav{float:right;height:16px;padding:2px 0;width:45%}
 #sb-nav a{display:block;float:right;height:16px;width:16px;margin-left:3px;cursor:pointer;background-repeat:no-repeat}
 #sb-nav-close{background-image:url(../images/close.png);position:absolute;display:block;z-index:999;width:32px;height:32px;top:-16px;right:-16px;cursor:pointer}
@@ -54,7 +54,7 @@ table.tablesorter thead tr th{text-transform:uppercase;font-weight:normal;color:
 table.tablesorter thead tr .tablesorter-header{background-repeat:no-repeat;background-position:center right;cursor:pointer}
 table.tablesorter thead tr .tablesorter-headerAsc{background-image:url(../images/sort-asc.png)}
 table.tablesorter thead tr .tablesorter-headerDesc{background-image:url(../images/sort-desc.png)}
-table.tablesorter thead tr .tablesorter-headerAsc, table.tablesorter thead tr .tablesorter-headerDesc{background-color:#EDEAEF}
+table.tablesorter thead tr .tablesorter-headerAsc, table.tablesorter thead tr .tablesorter-headerDesc{background-color:#E4E2E4}
 table.tablesorter tbody tr{border-bottom:#EDEAEF 1px solid}
 table.tablesorter tbody tr.tablesorter-childRow{border-bottom:none}
 table.tablesorter tbody tr.tr_last{border-bottom:1px solid #606E7F}
@@ -63,7 +63,7 @@ table.tablesorter tbody tr td{padding:4px 20px 4px 6px;vertical-align:middle;tex
 table.tablesorter.plugins td:first-child{width:64px;text-align:center}
 table.tablesorter.plugins tr>td+td+td{width:9%;white-space:nowrap}
 table.tablesorter.plugins td:last-child{width:96px;padding:0}
-table.tablesorter .desc_readmore strong,table.tablesorter .desc_readmore h4{font-size:13px}
+table.tablesorter .desc_readmore strong,table.tablesorter .desc_readmore h4{font-size:14px}
 table.tablesorter .desc_readmore h4,table.tablesorter .desc_readmore p:first-child{margin:0}
 table.tablesorter.left th,table.tablesorter.left td{text-align:left;width:20%}
 table.tablesorter.left th:first-child,table.tablesorter.left td:first-child{width:8%}
@@ -77,7 +77,7 @@ table.tablesorter.indexer thead th:first-child{width:4%}
 table.tablesorter.indexer thead th,table.tablesorter.indexer tbody td,table.tablesorter.indexer tfoot td{padding-left:10px}
 table.tablesorter.indexer thead tr>th+th{width:auto;text-align:left}
 table.tablesorter.indexer thead tr>th+th+th{width:14%}
-table.tablesorter.indexer tfoot td{padding-top:10px;font-size:11px}
+table.tablesorter.indexer tfoot td{padding-top:10px;font-size:12px}
 table.tablesorter.indexer tfoot tr{border-bottom:none}
 span.select ul{display:none;list-style-type:none;margin:0 0 2px 0;padding:0}
 span.select ul.unused{display:block}
@@ -212,14 +212,14 @@ div.icon-eml{background:url('../images/file-types.png') -96px -144px;width:16px;
 @keyframes tooltipster-scaling{50%{transform:scale(1.1)}100%{transform:scale(1)}}
 .tooltipster-update-scale{animation:tooltipster-scaling .6s}
 /*.tooltipster-sidetip .tooltipster-box{background:#565656;border:2px solid #000;border-radius:4px}*/
-.tooltipster-sidetip .tooltipster-box{border-radius:5px;border:none;background: -webkit-radial-gradient(#303030,#000000);background: linear-gradient(#303030,#000000)}
+.tooltipster-sidetip .tooltipster-box{border-radius:5px;border:none;background:-webkit-gradient(linear,left top,right top,from(#303030),to(#707070));background:linear-gradient(90deg,#303030 0,#707070)}
 .tooltipster-sidetip.tooltipster-bottom .tooltipster-box{margin-top:8px}
 .tooltipster-sidetip.tooltipster-left .tooltipster-box{margin-right:8px}
 .tooltipster-sidetip.tooltipster-right .tooltipster-box{margin-left:8px}
 /*.tooltipster-sidetip.tooltipster-top .tooltipster-box{margin-bottom:8px}*/
 .tooltipster-sidetip.tooltipster-top .tooltipster-box{margin-bottom:7px}
 /*.tooltipster-sidetip .tooltipster-content{color:#fff;line-height:18px;padding:6px 14px}*/
-.tooltipster-sidetip .tooltipster-content{color:#fff;padding:8px 16px}
+.tooltipster-sidetip .tooltipster-content{color:#f2f2f2;padding:8px 16px}
 .tooltipster-sidetip .tooltipster-arrow{overflow:hidden;position:absolute}
 .tooltipster-sidetip.tooltipster-bottom .tooltipster-arrow{height:10px;margin-left:-10px;top:0;width:20px}
 .tooltipster-sidetip.tooltipster-left .tooltipster-arrow{height:20px;margin-top:-10px;right:0;top:0;width:10px}
@@ -234,21 +234,21 @@ div.icon-eml{background:url('../images/file-types.png') -96px -144px;width:16px;
 .tooltipster-sidetip.tooltipster-top .tooltipster-arrow-background{border-top-color:#565656;left:0;top:-3px}
 .tooltipster-sidetip .tooltipster-arrow-border{border:10px solid transparent;left:0;top:0}
 /*.tooltipster-sidetip.tooltipster-bottom .tooltipster-arrow-border{border-bottom-color:#000}*/
-.tooltipster-sidetip.tooltipster-bottom .tooltipster-arrow-border{border-bottom-color:#2a2a2a}
+.tooltipster-sidetip.tooltipster-bottom .tooltipster-arrow-border{border-bottom-color:#1c1c1c}
 /*.tooltipster-sidetip.tooltipster-left .tooltipster-arrow-border{border-left-color:#000}*/
-.tooltipster-sidetip.tooltipster-left .tooltipster-arrow-border{border-left-color:#2a2a2a}
+.tooltipster-sidetip.tooltipster-left .tooltipster-arrow-border{border-left-color:#1c1c1c}
 /*.tooltipster-sidetip.tooltipster-right .tooltipster-arrow-border{border-right-color:#000}*/
-.tooltipster-sidetip.tooltipster-right .tooltipster-arrow-border{border-right-color:#2a2a2a}
+.tooltipster-sidetip.tooltipster-right .tooltipster-arrow-border{border-right-color:#1c1c1c}
 /*.tooltipster-sidetip.tooltipster-top .tooltipster-arrow-border{border-top-color:#000}*/
 .tooltipster-sidetip .tooltipster-arrow-uncropped{position:relative}
 .tooltipster-sidetip.tooltipster-bottom .tooltipster-arrow-uncropped{top:-10px}
 .tooltipster-sidetip.tooltipster-right .tooltipster-arrow-uncropped{left:-10px}
-.tooltipster-sidetip.tooltipster-top .tooltipster-box{border-bottom:3px solid #478406}
-.tooltipster-sidetip.tooltipster-bottom .tooltipster-box{border-top:3px solid #478406}
-.tooltipster-sidetip.tooltipster-bottom .tooltipster-arrow-border{border-bottom-color:#478406}
-.tooltipster-sidetip.tooltipster-top .tooltipster-arrow-border{border-top-color:#478406}
-.tooltipster-sidetip.tooltipster-left .tooltipster-arrow-border{border-left-color:#478406}
-.tooltipster-sidetip.tooltipster-right .tooltipster-arrow-border{border-right-color:#478406}
-.tooltipster-sidetip.tooltipster-left .tooltipster-box{border-right:3px solid #478406}
-.tooltipster-sidetip.tooltipster-right .tooltipster-box{border-left:3px solid #478406}
-.fileTree{background-color:#FFF}
+.tooltipster-sidetip.tooltipster-top .tooltipster-box{border-bottom:3px solid #ff8c2f}
+.tooltipster-sidetip.tooltipster-bottom .tooltipster-box{border-top:3px solid #ff8c2f}
+.tooltipster-sidetip.tooltipster-bottom .tooltipster-arrow-border{border-bottom-color:#ff8c2f}
+.tooltipster-sidetip.tooltipster-top .tooltipster-arrow-border{border-top-color:#ff8c2f}
+.tooltipster-sidetip.tooltipster-left .tooltipster-arrow-border{border-left-color:#ff8c2f}
+.tooltipster-sidetip.tooltipster-right .tooltipster-arrow-border{border-right-color:#ff8c2f}
+.tooltipster-sidetip.tooltipster-left .tooltipster-box{border-right:3px solid #ff8c2f}
+.tooltipster-sidetip.tooltipster-right .tooltipster-box{border-left:3px solid #ff8c2f}
+.fileTree{background-color:#f2f2f2}
