--- a/plugins/dynamix/styles/dynamix-black.css
+++ b/plugins/dynamix/styles/dynamix-black.css
@@ -1,46 +1,47 @@
 body>div.jGrowl{position:fixed}
-div.jGrowl{font-size:12px}
-div.jGrowl.top-left{left:10px;top:-34px}
-div.jGrowl.top-right{right:10px;top:-34px}
-div.jGrowl.bottom-left{left:10px;bottom:24px}
+div.jGrowl{font-size:14px}
+div.jGrowl.top-left{left:70px;top:110px}
+div.jGrowl.top-right{right:10px;top:110px}
+div.jGrowl.bottom-left{left:70px;bottom:24px}
 div.jGrowl.bottom-right{right:10px;bottom:24px}
-div.jGrowl.center{top:-34px;left:40%}
+div.jGrowl.center{top:110px;left:40%}
 div.jGrowl div.jGrowl-notify.alert{color:#F0000C;background-color:#FF9E9E;opacity:0.96;border:1px solid #F0000C;box-shadow:2px 2px 1px #888888}
 div.jGrowl div.jGrowl-notify.warning{color:#E68A00;background-color:#FEEFB3;opacity:0.96;border:1px solid #E68A00;box-shadow:2px 2px 1px #888888}
 div.jGrowl div.jGrowl-notify.normal{color:#4F8A10;background-color:#DFF2BF;opacity:0.96;border:1px solid #4F8A10;box-shadow:2px 2px 1px #888888}
-div.jGrowl div.jGrowl-notify.default{color:#42453E;background-color:#FAFAF7;opacity:0.96;border:1px solid #42453E;box-shadow:2px 2px 1px #888888}
+div.jGrowl div.jGrowl-notify.default{color:#42453E;background-color:#808080;opacity:0.96;border:1px solid #42453E;box-shadow:2px 2px 1px #888888}
 div.jGrowl div.jGrowl-notify{min-height:40px;width:380px;padding:10px;margin:5px 0;text-align:left;border-radius:6px}
 div.jGrowl div.jGrowl-notify div.jGrowl-header{font-weight:bold}
 div.jGrowl div.jGrowl-notify div.jGrowl-close{float:right;cursor:pointer}
-div.jGrowl div.jGrowl-closer{width:400px;color:#FAFAF7;background-color:#42453E;opacity:0.96;border:1px solid #42453e;margin:5px 0;padding:4px 0;cursor:pointer;font-weight:bold;text-align:center;border-radius:6px}
-div.jGrowl div.jGrowl-closer.top{position:fixed;top:0}
+div.jGrowl div.jGrowl-closer{width:400px;color:#808080;background-color:#121510;opacity:0.96;border:2px solid #B0B0B0;margin:5px 0;padding:4px 0;cursor:pointer;font-weight:bold;text-align:center;border-radius:6px}
+div.jGrowl div.jGrowl-closer.top{position:fixed;top:140px}
 @media print{div.jGrowl{display:none}}
-.ui-dropdownchecklist{background:-webkit-radial-gradient(#505050,#303030);background:linear-gradient(#505050,#303030);border:none;box-shadow:0 2px 0 #404040;border-radius:4px;outline:none;cursor:pointer;height:23px;line-height:23px}
-.ui-dropdownchecklist-group{font-weight:normal;font-style:italic;padding:1px 9px 1px 8px}
-.ui-dropdownchecklist-selector{border:1px solid #404040;display:inline-block;cursor:pointer;padding:1px 9px 1px 8px}
+.ui-dropdownchecklist{background:transparent;border:none;box-shadow:0 1px 0 #f2f2f2;outline:none;height:32px;line-height:32px;cursor:pointer}
+.ui-dropdownchecklist-selector{border:1px solid #f2f2f2;display:inline-block;cursor:pointer;padding:1px 9px 1px 11px}
+.ui-dropdownchecklist-group{font-weight:normal;font-style:italic;padding:1px 9px 1px 11px}
 .ui-dropdownchecklist-selector-wrapper{vertical-align:middle;font-size:0}
-.ui-state-active{background:linear-gradient(#303030,#101010);background:-webkit-radial-gradient(#303030,#101010)}
-.ui-dropdownchecklist-dropcontainer{background:#060606;border:1px solid #404040}
-.ui-state-disabled{background:linear-gradient(#202020,#101010);background:-webkit-radial-gradient(#202020,#101010)}
+.ui-state-active{border-color:#ff8c2f;background:transparent}
+.ui-dropdownchecklist-dropcontainer{color:#f2f2f2;background-color:#262626;border:#ff8c2f 1px solid}
+.ui-state-disabled{color:#f2f2f2;border-color:#6c6c6c;background:#262626;opacity:0.5;cursor:default}
 .ui-dropdownchecklist-indent{padding-left:7px}
-.ui-dropdownchecklist-text{font-family:arimo;font-size:12px;color:#A0A0A0}
+.ui-dropdownchecklist-text{font-family:clear-sans;font-size:14px;color:#f2f2f2}
+.ui-dropdownchecklist-item{height:24px;line-height:24px}
 .ui-dropdownchecklist-item input{vertical-align:top}
 #sb-info-inner,#sb-loading-inner,div.sb-message{color:#808080}
-#sb-title,#sb-title-inner{border-top-left-radius:10px;border-top-right-radius:10px;width:100%;height:50px;line-height:50px;font-size:18px;font-weight:bold;background:#C0C0C0;color:#606060;text-indent:10px;text-align:center}
+#sb-title,#sb-title-inner{border-top-left-radius:10px;border-top-right-radius:10px;width:100%;height:50px;line-height:50px;font-size:18px;font-weight:bold;letter-spacing:2px;background:#C0C0C0;color:#606060;text-indent:10px;text-align:center}
 #sb-title,#sb-info{position:relative;margin:0;padding:0;overflow:hidden}
 #sb-container{position:fixed;margin:0;padding:0;top:0;left:0;z-index:999;text-align:left;visibility:hidden;display:none}
 #sb-overlay{position:relative;height:100%;width:100%}
-#sb-wrapper{position:absolute;visibility:hidden;width:100px;border:1px #808080 solid;border-radius:10px;color:#1B1D1B;background:#EDEAEF}
+#sb-wrapper{position:absolute;visibility:hidden;width:100px;border:1px #808080 solid;border-radius:10px;color:#1c1c1c;background:#f2f2f2}
 #sb-wrapper-inner{overflow:hidden;height:100px}
 #sb-body{position:relative;height:100%}
-#sb-body-inner{position:absolute;height:100%;width:100%;color:#1B1D1B;background:#EDEAEF}
+#sb-body-inner{position:absolute;height:100%;width:100%;color:#1b1b1b;background:#f2f2f2}
 #sb-body img{border:none}
 #sb-loading{position:relative;height:100%}
 #sb-loading-inner{position:absolute;font-size:18px;line-height:20px;height:20px;top:50%;margin-top:-12px;width:100%;text-align:center}
 #sb-loading-inner span{background:url(../images/loading.gif) no-repeat;padding-left:22px;display:inline-block}
-#sb-body,#sb-loading{color:#1B1D1B;background-color:#EDEAEF}
+#sb-body,#sb-loading{color:#1b1b1b;background-color:#f2f2f2}
 #sb-info,#sb-info-inner{height:20px;line-height:20px}
-#sb-info-inner{font-size:12px}
+#sb-info-inner{font-size:14px}
 #sb-nav{float:right;height:16px;padding:2px 0;width:45%}
 #sb-nav a{display:block;float:right;height:16px;width:16px;margin-left:3px;cursor:pointer;background-repeat:no-repeat}
 #sb-nav-close{background-image:url(../images/close.png);position:absolute;display:block;z-index:999;width:32px;height:32px;top:-16px;right:-16px;cursor:pointer}
@@ -48,40 +49,46 @@ div.jGrowl div.jGrowl-closer.top{position:fixed;top:0}
 #sb-counter a{padding:0 4px 0 0;text-decoration:none;cursor:pointer}
 #sb-counter a.sb-counter-current{text-decoration:underline}
 table.tablesorter{margin:0 0 15px 0}
-table.tablesorter thead tr th{font-size:13px;font-weight:normal;background:-webkit-radial-gradient(#101010,#202020);background:linear-gradient(#101010,#202020);padding:5px 20px 5px 6px;white-space:nowrap;text-align:left}
+table.tablesorter thead tr{border-bottom:#2b2b2b 1px solid}
+table.tablesorter thead tr th{font-weight:normal;color:#f2f2f2;background:#262626;padding:8px 20px 8px 6px;white-space:nowrap;text-align:left}
 table.tablesorter thead tr .tablesorter-header{background-repeat:no-repeat;background-position:center right;cursor:pointer}
 table.tablesorter thead tr .tablesorter-headerAsc{background-image:url(../images/sort-asc.png)}
 table.tablesorter thead tr .tablesorter-headerDesc{background-image:url(../images/sort-desc.png)}
-table.tablesorter thead tr .tablesorter-headerAsc, table.tablesorter thead tr .tablesorter-headerDesc{background-color:#101010}
-table.tablesorter tbody tr:nth-child(even){background-color:#0C0C0C}
-table.tablesorter.four tbody tr:nth-child(4n-1){background-color:#0C0C0C}
-table.tablesorter tbody tr.tr_last{background:#181818;border-top:1px solid #202020;border-bottom:1px solid #202020}
+table.tablesorter thead tr .tablesorter-headerAsc, table.tablesorter thead tr .tablesorter-headerDesc{background-color:#262626}
+table.tablesorter tbody tr:nth-child(even){background-color:#212121}
+table.tablesorter.four tbody tr:nth-child(4n-1){background-color:#212121}
+table.tablesorter tbody tr.tr_last{background:#212121;border-top:1px solid #2b2b2b;border-bottom:1px solid #2b2b2b}
 table.tablesorter tbody tr.tr_last td{padding:8px 20px 8px 6px}
-table.tablesorter tbody td{padding:4px 20px 4px 6px;vertical-align:middle;text-align:justify}
+table.tablesorter tbody tr td{padding:4px 20px 4px 6px;vertical-align:middle;text-align:justify}
 table.tablesorter.plugins td:first-child{width:64px;text-align:center}
 table.tablesorter.plugins tr>td+td+td{width:9%;white-space:nowrap}
 table.tablesorter.plugins td:last-child{width:96px;padding:0}
+table.tablesorter .desc_readmore strong,table.tablesorter .desc_readmore h4{font-size:14px}
+table.tablesorter .desc_readmore h4,table.tablesorter .desc_readmore p:first-child{margin:0}
 table.tablesorter.left th,table.tablesorter.left td{text-align:left;width:20%}
 table.tablesorter.left th:first-child,table.tablesorter.left td:first-child{width:8%}
 table.tablesorter.left th:nth-last-child(2),table.tablesorter.left td:nth-last-child(2){width:8%}
 table.tablesorter.left th:last-child,table.tablesorter.left td:last-child{text-align:right;width:4%}
-table.tablesorter.shift{margin-top:-21px}
+table.tablesorter.shift{margin-top:-30px}
+table.tablesorter.kvm{display:block;padding-top:24px}
 table.tablesorter thead.fixed{display:table;width:100%}
 table.tablesorter tbody.fixed{display:block;overflow:auto}
 table.tablesorter.indexer thead th:first-child{width:4%}
 table.tablesorter.indexer thead th,table.tablesorter.indexer tbody td,table.tablesorter.indexer tfoot td{padding-left:10px}
 table.tablesorter.indexer thead tr>th+th{width:auto;text-align:left}
 table.tablesorter.indexer thead tr>th+th+th{width:14%}
-table.tablesorter.indexer tfoot td{padding-top:10px;font-size:11px}
+table.tablesorter.indexer tfoot td{padding-top:10px;font-size:12px}
 span.select ul{display:none;list-style-type:none;margin:0 0 2px 0;padding:0}
 span.select ul.unused{display:block}
 span.select ul li.nosort{font-weight:bold}
 span.select ul li.ident{padding-left:7px}
 span.select ul li span{display:none}
-span.select{font-size:12px;color:#A0A0A0;background:-webkit-radial-gradient(#505050,#303030);background:linear-gradient(#505050,#303030);padding:3px 6px;margin:0 10px 0 0;border:none;box-shadow:0 2px 0 #404040;border-radius:4px;outline:none;display:inline-block;cursor:pointer;width:120px}
-span.select[disabled]{color:#505050;background:-webkit-radial-gradient(#303030,#101010);background:linear-gradient(#303030,#101010);cursor:default;box-shadow:0 2px 0 #202020}
-div.sb-message{font-size:12px;padding:10px;text-align:center}
-div.sb-message a:link,div.sb-message a:visited{color:#fff;text-decoration:underline}
+span.select{padding:3px 6px;margin:0 10px 0 0;border:none;border-radius:4px;box-shadow:0 2px 0 #ff8c2f,inset 0 -1px #1c1c1c;background:tranparent;outline:none;display:inline-block;cursor:pointer}
+span.select[disabled]{color:#f2f2f2;border-color:#808080;background:#262626;opacity:0.5;cursor:default}
+div.sb-message{padding:10px;text-align:center}
+div.sb-message a:link,div.sb-message a:visited{color:#486DBA;text-decoration:underline}
+div.box{margin-top:0;line-height:30px;color:#f2f2f2;margin-left:0}
+div.box div{padding:10px;border-bottom:rgba(0,0,0,0.1) 1px solid}
 div.icon-file{background:url('../images/file-types.png') -112px -112px;width:16px;height:16px}
 div.icon-ogg{background:url('../images/file-types.png') 0 0;width:16px;height:16px}
 div.icon-php{background:url('../images/file-types.png') -16px 0;width:16px;height:16px}
@@ -204,14 +211,14 @@ div.icon-eml{background:url('../images/file-types.png') -96px -144px;width:16px;
 @keyframes tooltipster-scaling{50%{transform:scale(1.1)}100%{transform:scale(1)}}
 .tooltipster-update-scale{animation:tooltipster-scaling .6s}
 /*.tooltipster-sidetip .tooltipster-box{background:#565656;border:2px solid #000;border-radius:4px}*/
-.tooltipster-sidetip .tooltipster-box{border-radius:5px;border:none;background: -webkit-radial-gradient(#303030,#000000);background: linear-gradient(#303030,#000000)}
+.tooltipster-sidetip .tooltipster-box{border-radius:5px;border:none;background:-webkit-gradient(linear,left top,right top,from(#303030),to(#707070));background:linear-gradient(90deg,#303030 0,#707070)}
 .tooltipster-sidetip.tooltipster-bottom .tooltipster-box{margin-top:8px}
 .tooltipster-sidetip.tooltipster-left .tooltipster-box{margin-right:8px}
 .tooltipster-sidetip.tooltipster-right .tooltipster-box{margin-left:8px}
 /*.tooltipster-sidetip.tooltipster-top .tooltipster-box{margin-bottom:8px}*/
 .tooltipster-sidetip.tooltipster-top .tooltipster-box{margin-bottom:7px}
 /*.tooltipster-sidetip .tooltipster-content{color:#fff;line-height:18px;padding:6px 14px}*/
-.tooltipster-sidetip .tooltipster-content{color:#fff;padding:8px 16px}
+.tooltipster-sidetip .tooltipster-content{color:#f2f2f2;padding:8px 16px}
 .tooltipster-sidetip .tooltipster-arrow{overflow:hidden;position:absolute}
 .tooltipster-sidetip.tooltipster-bottom .tooltipster-arrow{height:10px;margin-left:-10px;top:0;width:20px}
 .tooltipster-sidetip.tooltipster-left .tooltipster-arrow{height:20px;margin-top:-10px;right:0;top:0;width:10px}
@@ -226,17 +233,21 @@ div.icon-eml{background:url('../images/file-types.png') -96px -144px;width:16px;
 .tooltipster-sidetip.tooltipster-top .tooltipster-arrow-background{border-top-color:#565656;left:0;top:-3px}
 .tooltipster-sidetip .tooltipster-arrow-border{border:10px solid transparent;left:0;top:0}
 /*.tooltipster-sidetip.tooltipster-bottom .tooltipster-arrow-border{border-bottom-color:#000}*/
+.tooltipster-sidetip.tooltipster-bottom .tooltipster-arrow-border{border-bottom-color:#1c1c1c}
 /*.tooltipster-sidetip.tooltipster-left .tooltipster-arrow-border{border-left-color:#000}*/
+.tooltipster-sidetip.tooltipster-left .tooltipster-arrow-border{border-left-color:#1c1c1c}
 /*.tooltipster-sidetip.tooltipster-right .tooltipster-arrow-border{border-right-color:#000}*/
+.tooltipster-sidetip.tooltipster-right .tooltipster-arrow-border{border-right-color:#1c1c1c}
 /*.tooltipster-sidetip.tooltipster-top .tooltipster-arrow-border{border-top-color:#000}*/
 .tooltipster-sidetip .tooltipster-arrow-uncropped{position:relative}
 .tooltipster-sidetip.tooltipster-bottom .tooltipster-arrow-uncropped{top:-10px}
 .tooltipster-sidetip.tooltipster-right .tooltipster-arrow-uncropped{left:-10px}
-.tooltipster-sidetip.tooltipster-top .tooltipster-box{border-bottom:3px solid #478406}
-.tooltipster-sidetip.tooltipster-bottom .tooltipster-box{border-top:3px solid #478406}
-.tooltipster-sidetip.tooltipster-bottom .tooltipster-arrow-border{border-bottom-color:#478406}
-.tooltipster-sidetip.tooltipster-top .tooltipster-arrow-border{border-top-color:#478406}
-.tooltipster-sidetip.tooltipster-left .tooltipster-arrow-border{border-left-color:#478406}
-.tooltipster-sidetip.tooltipster-right .tooltipster-arrow-border{border-right-color:#478406}
-.tooltipster-sidetip.tooltipster-left .tooltipster-box{border-right:3px solid #478406}
-.tooltipster-sidetip.tooltipster-right .tooltipster-box{border-left:3px solid #478406}
+.tooltipster-sidetip.tooltipster-top .tooltipster-box{border-bottom:3px solid #ff8c2f}
+.tooltipster-sidetip.tooltipster-bottom .tooltipster-box{border-top:3px solid #ff8c2f}
+.tooltipster-sidetip.tooltipster-bottom .tooltipster-arrow-border{border-bottom-color:#ff8c2f}
+.tooltipster-sidetip.tooltipster-top .tooltipster-arrow-border{border-top-color:#ff8c2f}
+.tooltipster-sidetip.tooltipster-left .tooltipster-arrow-border{border-left-color:#ff8c2f}
+.tooltipster-sidetip.tooltipster-right .tooltipster-arrow-border{border-right-color:#ff8c2f}
+.tooltipster-sidetip.tooltipster-left .tooltipster-box{border-right:3px solid #ff8c2f}
+.tooltipster-sidetip.tooltipster-right .tooltipster-box{border-left:3px solid #ff8c2f}
+.fileTree{background-color:#f2f2f2}
