--- a/plugins/dynamix/Disk.page
+++ b/plugins/dynamix/Disk.page
@@ -38,7 +38,7 @@ input.clone{margin-left:8px;margin-right:0}
 span.clone,i.clone{margin-right:4px}
 </style>
 <script>
-var ctrl = "<span class='ctrl2 status vhshift'><a href='/Shares/Disk?name=<?=$prev?>' title='previous disk share'><button type='button' style='margin-right:4px'><i class='fa fa-chevron-left fa-fw'></i></button></a><a href='/Shares/Disk?name=<?=$next?>' title='next disk share'><button type='button'><i class='fa fa-chevron-right fa-fw'></i></button></a></span>";
+var ctrl = "<span class='ctrl2 status <?=$tabbed?'vhshift':'vshift'?>'><a href='/Shares/Disk?name=<?=$prev?>' title='previous disk share'><button type='button' style='margin-right:4px'><i class='fa fa-chevron-left fa-fw'></i></button></a><a href='/Shares/Disk?name=<?=$next?>' title='next disk share'><button type='button'><i class='fa fa-chevron-right fa-fw'></i></button></a></span>";
 
 function toggleButton(button,id) {
   var disabled = true;
