--- a/plugins/dynamix/styles/default-black.css
+++ b/plugins/dynamix/styles/default-black.css
@@ -1,5 +1,5 @@
 html{font-family:clear-sans;height:100%}
-body{font-size:14px;color:#f2f2f2;background:#1c1c1c;padding:0;margin:0;-webkit-font-smoothing:antialiased;-moz-osx-font-smoothing:grayscale}
+body{font-size:14px;color:#f2f2f2;background:#1c1b1b;padding:0;margin:0;-webkit-font-smoothing:antialiased;-moz-osx-font-smoothing:grayscale}
 @media (max-width:1280px){#template{min-width:1280px;margin:0}}
 @media (min-width:1281px){#template{min-width:1280px;margin:0 10px}}
 @media (min-width:1921px){#template{min-width:1280px;max-width:1920px;margin:0 auto}}
@@ -48,7 +48,7 @@ input.trim{width:50px}
 #header .logo{float:left;margin-top:20px;margin-left:20px}
 #header .logo img{margin:4px 50px 0 20px}
 #header .logo a{color:#ff8c2f;font-size:24px}
-#header .block{margin:2px 5px 0 0;float:right;text-align:right;background-color:rgba(245,245,245,0.4);border-radius:10px;padding:5px 20px}
+#header .block{margin:2px 5px 0 0;float:right;text-align:right;background-color:rgba(242,242,242,0.4);border-radius:10px;padding:5px 20px}
 #header .text-left{float:left;text-align:right;color:#1c1c1c;padding-right:5px;border-right:solid medium #f15a2c}
 #header .text-right{float:right;color:#1c1c1c;text-align:left;padding-left:5px;min-width:165px}
 #header #licensetype{font-weight:bold;color:#ff8c2f;text-transform:uppercase;letter-spacing:1px}
