--- a/plugins/dynamix/styles/default-white.css
+++ b/plugins/dynamix/styles/default-white.css
@@ -56,7 +56,7 @@ input.trim{width:50px}
 #title span.left{font-size:15px}
 #title span.right{font-size:13px;padding-top:2px;padding-right:10px;float:right}
 #title span img{padding-right:4px}
-#menu{position:fixed;top:100px;left:0;width:100%;height:32px;line-height:32px;padding:0;margin:0;background:#1c1c1c;z-index:101}
+#menu{position:fixed;top:100px;left:0;width:100%;height:32px;line-height:32px;padding:0;margin:0;background:#1c1b1b;z-index:101}
 #nav-block{overflow:hidden;height:38px;letter-spacing:2px}
 #nav-left{float:left}
 #nav-right{border-right:none;float:right}
