--- a/plugins/dynamix/styles/default-gray.css
+++ b/plugins/dynamix/styles/default-gray.css
@@ -241,17 +241,17 @@ div.vmtemplate:hover{background-color:#121510}
 div.vmtemplate{height:120px;width:120px;border:1px solid #0C0F0B}
 div.vmtemplate img{margin-top:20px}
 div.up{margin-top:-20px;border:1px solid #0C0F0B;padding:4px 6px;overflow:auto}
-div.spinner{height:32px;width:32px;margin:24px auto;
--webkit-animation: fa-spin .6s infinite linear;
--moz-animation: fa-spin .6s infinite linear;
--o-animation: fa-spin .6s infinite linear;
-animation: fa-spin .6s infinite linear;
-border-left:6px solid rgba(0,174,239,.15);
-border-right:6px solid rgba(0,174,239,.15);
-border-bottom:6px solid rgba(0,174,239,.15);
-border-top:6px solid rgba(0,174,239,.8);
-border-radius:100%;}
-div.spinner.fixed{display:none;position:absolute;left:47%;top:40px}
+div.spinner{margin:48px auto;text-align:center}
+div.spinner.fixed{display:none;position:absolute;left:46%;top:66px;margin:0}
+div.spinner .unraid_mark{height:64px}
+div.spinner .unraid_mark_2,div .unraid_mark_4{animation:mark_2 1.5s ease infinite}
+div.spinner .unraid_mark_3{animation:mark_3 1.5s ease infinite}
+div.spinner .unraid_mark_6,div .unraid_mark_8{animation:mark_6 1.5s ease infinite}
+div.spinner .unraid_mark_7{animation:mark_7 1.5s ease infinite}
+@keyframes mark_2{50% {transform:translateY(-40px)} 100% {transform:translateY(0px)}}
+@keyframes mark_3{50% {transform:translateY(-62px)} 100% {transform:translateY(0px)}}
+@keyframes mark_6{50% {transform:translateY(40px)} 100% {transform:translateY(0px)}}
+@keyframes mark_7{50% {transform:translateY(62px)} 100% {transform: translateY(0px)}}
 pre.up{margin-top:0}
 pre{border:1px solid #0C0F0B;font-family:bitstream;font-size:12px;padding:0;overflow:auto;margin-bottom:10px;padding:10px}
 iframe#progressFrame{position:fixed;bottom:32px;left:60px;margin:0;padding:8px 8px 0 8px;width:100%;height:12px;line-height:12px;border-style:none;overflow:hidden;font-family:bitstream;font-size:12px;color:#808080;white-space:nowrap;z-index:-2}
